# wfs2mapserver

./: .gitignore  Cargo.toml  Example1-6.map  README.md  chinadixing.rar  git-push.nu  git-push.sh  run.sh
.cargo/: config.toml
src/10_demo_display/: prj.conf
src/10_demo_display/src/: main.c
src/Advanced-PassGen/: package.json
src/JWKS-Server/: Cargo.toml  README.md
src/JWKS-Server/docker/envoy/: envoy.yaml
src/JWKS-Server/src/: main.rs
src/api_server/: Cargo.toml
src/api_server/swagger/: openapi.yaml
src/energy-monitor/: Cargo.toml
src/energy-monitor-tauri/: README.md  package-lock.json  package.json  tsconfig.json
src/energy-monitor-tauri/src/: App.vue  SSRexample.js  main.ts  openai.ts
src/energy-monitor-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/energy-monitor-tauri/src-tauri/src/: jlrs.rs  lib.rs
src/energy-monitor-tauri/src/components/: MyChart.vue  Three.vue  Three2.vue  Three3.vue
src/energy-monitor/ui/: images.slint
src/jl-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
src/jlrs/: .cargo_vcs_info.json  Cargo.toml
src/jlrs-macros/: .cargo_vcs_info.json  Cargo.toml
src/lv_binding_rust/lvgl-sys/: build.rs
src/lvgldemo/: CMakeLists.txt  Cargo.toml  README.md  README_mk_sbuild.md  arm.txt  build.rs  x86.txt
src/lvgldemo/.cargo/: config.toml
src/lvgldemo/examples/: hello11.c  hellosdl2.rs  sdl.rs  sdl2.c  sdl2.rs
src/lvgldemo/src/: main.rs
src/lvglzephyr/: CMakeLists.txt  prj.conf
src/lvglzephyr/boards/: esp32s3_devkitc.overlay
src/lvglzephyr/src/: lcd_qemu_rgb_panel_main.c  lvgl_demo_ui.c  main2.c
src/main/: Cargo.toml  build.rs
src/main/src/: api_server_adapter.rs  main.rs  metrics.rs  seccomp.rs
src/main/tests/: verify_dependencies.rs
src/mapserver/: Cargo.toml
src/mapserver-sys/: Cargo.toml  bindings.rs  build.rs
src/mapserver/src/: authjwks.rs  axum_utf8.rs  index.html  lib.rs  main.rs  mappool.rs  mvp.rs
src/mapserver/swagger/: openapi.yaml
src/mcu-board-support/: Cargo.toml
src/opencvdemo/: CMakeLists.txt  README.md
src/opencvdemo/src/: BallTracker.cpp  GolfBallOpenCV.cpp  ImagePipeline.cpp  ImagePipeline.hpp  ImageProcessing.cpp  ImageProcessing.hpp  SnavelyReprojectionError.h  ballTrackingWithColor.cpp  ballTrackingWithHoughCircles.cpp  bundle_adjustment_ceres.cpp  example11.cpp  example_02-09.cpp  example_09-04.cpp  example_10-02.cpp  example_10-03.cpp  example_11-01.cpp  example_11-02.cpp  example_11-03.cpp  example_12-01.cpp  example_12-01_dft.cpp  example_12-02.cpp  example_12-03.cpp  example_12-04.cpp  example_13-01.cpp  example_13-02.cpp  example_13-03.cpp  example_14-01.cpp  example_14-02.cpp  example_14-03.cpp  example_14-04.cpp  example_15-02.cpp  example_15-03.cpp  example_15-04.cpp  example_15-05.cpp  example_15-BackgroundSubtractor.cpp  example_16-01.cpp  example_16-02.cpp  example_17-01.cpp  example_17-02.cpp  example_19-01.cpp  (+11 more)
src/opencvvideo/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
src/opencvvideo/.cargo/: config.toml
src/opencvvideo/examples/: bal.rs  bundle_adjustment_ceres.rs  dense_mapping.rs  errfun.rs  example11.rs  example_10-01.rs  example_12-01.rs  example_13-01.rs  example_15-02.rs  example_15-02_.rs  example_17-01.rs  example_17-01_.rs  example_18-01.rs  example_19-01.rs  example_19-03.rs  gaussNewton.rs  orb.rs  pose_estimation_2d2d.rs  random.rs  rotation.rs  simple_example-kalman.rs  sir_example.rs  triangulation.rs
src/opencvvideo/include/: opencv.h
src/opencvvideo/src/: crud.rs  main.rs  opencv.cc  testtest.rs
src/opencvvideo/tests/: orb.rs
src/rust-sdl2/sdl2-sys/: build.rs
src/shadcnelevator/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src/shadcnelevator/app/: page.tsx
src/shadcnelevator/app/drag/: layout.tsx  page.tsx
src/shadcnelevator/app/drag/mc/: MultipleContainers.tsx  page.tsx
src/shadcnelevator/app/form/: globals.css  layout.tsx  page.tsx  post.ts  post.tsx
src/shadcnelevator/app/months/: route.ts
src/shadcnelevator/app/three/: Reflect.tsx  layout.tsx  page.tsx
src/shadcnelevator/components/: Action.tsx  Container.tsx  DndPills.tsx  Item.tsx
src/utils/: Cargo.toml
src/utils/src/: lib.rs
tests/: README.md
