[workspace]
members = [
  #"src/mapserver",
  "src/JWKS-Server",
  #"src/opencvvideo",
  #"src/energy-monitor-tauri/src-tauri",
  #"src/lv_binding_rust/lvgl",
  #"src/lv_binding_rust/lvgl-codegen",
  #"src/lv_binding_rust/lvgl-sys",
  "src/rust-sdl2/sdl2-sys",
  "src/rust-sdl2",
  "src/lvgldemo",
]
default-members = ["src/mapserver"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
