[package]
name = "lvgldemo"
version = "1.0.0"
edition = "2021"

#links = ""

[dependencies]
lazy_static = "1.5.0"

lvgl = "0.6.2"
cxx = "1.0"

linfa = { version = "0.7.0" }
linfa-linalg = { version = "0.2", default-features = false }
ndarray = { version = "0.16.1", features = ["approx"] }
ndarray-linalg = { version = "0.17", optional = true }
ndarray-stats = "0.6"
ndarray-rand = { version = "0.15" }
thiserror = "2.0.12"

regex = "1.11.1"
encoding = "0.2"

serde_regex = { version = "1.1", optional = true }

#sophus = "0.14.0"

nalgebra = "0.32.5"
#ceres-solver = { version = "0.4.0", features = ["source"] }

rand = "0.8.5"
pdqselect = "0.1.1"

#serde and base types
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#log lib
log = "0.4"
fast_log = "1.7"

tokio = { version = "1.45.0", features = ["full"] }
rbs = { version = "4.5.20" }
rbatis = { version = "4.5.30", features = ["debug_mode"] }
#rbdc-sqlite = { version = "4.5.30" }
#rbdc-mysql = { version = "4.5.30" }
rbdc-pg = { version = "4.5.14" }
#rbdc-mssql = { version = "4.5.30" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies.jemalloc-sys]
version = "0.5.4"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]

[profile.release]
debug = true

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
linfa-datasets = { version = "0.7.0", features = [
    "diabetes",
    "winequality",
] }
linfa-bayes = { version = "0.7.0" }
linfa-preprocessing = { version = "0.7.0" }
curl = "0.4.35"
tar = "0.4.33"
linfa = { version = "0.7.0", features = ["benchmarks"] }
flate2 = "1.0.20"

[build-dependencies]
cxx-build = "1.0"