[package]
name = "main"
version = "1.0.0-dev"
edition = "2021"
build = "build.rs"
description = ""
license = "Apache-2.0"

[[bin]]
name = "main"
bench = false

[dependencies]
displaydoc = "0.2.4"
event-manager = "0.3.0"
libc = "0.2.148"
serde_json = "1.0.107"
thiserror = "1.0.49"
timerfd = "1.5.0"

api_server = { path = "../api_server" }
utils = { path = "../utils" }

[dev-dependencies]
cargo_toml = "0.16.3"
regex = { version = "1.9.6", default-features = false, features = ["std", "unicode-perl"] }

# Dev-Dependencies for uffd examples
serde = { version = "1.0.188", features = ["derive"] }
userfaultfd = "0.7.0"

[build-dependencies]
bincode = "1.2.1"
serde = { version = "1.0.188" }
serde_json = "1.0.107"
