[package]
name = "mapserver"
version = "1.0.0"
edition = "2021"

[dependencies]
mapserver-sys = { path = "../mapserver-sys"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.2", features = [] }
hyper = { version = "*", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["tokio", "client", "client-legacy", "http1"] }
hyper-tls = "0.6.0"
tokio = { version = "*", features = ["full"] }
tower = "*"
threadpool = "1"
crossbeam-channel = "*"
libc = "0.2.151"
axum-swagger-ui = "0.3.0"
http = "1.0.0"
tower-http = { version = "0.5.0", features = ["decompression-gzip", "set-header", "trace"]}
http-body = "1.0.0"
http-body-util = "0.1.0"
bytes = "1.5.0"

axum-jwks = "0.5.0"

async-trait = "0.1.74"

[profile.release]
lto = true
